In order to run as JPMS application